--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest flake8
+          pip install -r starter/requirements.txt
 
       # Step 4: Run flake8
       #- name: Run flake8
