--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -31,8 +31,8 @@ jobs:
       #- name: Run flake8
         #run: |
           #flake8 .
-
+      # starter/test_main.py
       # Step 5: Run pytest
       - name: Run pytest
         run: |
-          pytest starter/test_main.py starter/starter/ml_test.py
+          pytest starter/starter/ml_test.py
