--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -23,6 +23,7 @@ jobs:
       # Step 3: Install dependencies
       - name: Install dependencies
         run: |
+          cd starter
           python -m pip install --upgrade pip
           pip install pytest flake8
           pip install -r starter/requirements.txt
