--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -26,7 +26,7 @@ jobs:
           cd starter
           python -m pip install --upgrade pip
           pip install pytest flake8
-          pip install -r starter/requirements.txt
+          pip install -r requirements.txt
 
       # Step 4: Run flake8
       #- name: Run flake8
