--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -36,4 +36,5 @@ jobs:
       # Step 5: Run pytest
       - name: Run pytest
         run: |
-          python3 -m pytest starter/starter/ml_test.py
+          cd starter
+          python3 -m pytest starter/ml_test.py
