--- a/.github/workflows/test_push.yml
+++ b/.github/workflows/test_push.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run pytest
         run: |
           cd starter
-          python3 -m pytest starter/ml_test.py starter/test_main.py
+          python3 -m pytest starter/ml_test.py test_main.py
